# mcpd-plugins-sdk-python

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
examples/auth_plugin/: README.md  __init__.py  main.py
examples/logging_plugin/: README.md  __init__.py  main.py
examples/rate_limit_plugin/: README.md  __init__.py  main.py
examples/simple_plugin/: README.md  __init__.py  main.py
examples/transform_plugin/: README.md  __init__.py  main.py
scripts/: build_plugin.sh
src/mcpd_plugins/: __init__.py  base_plugin.py  server.py
tests/: conftest.py
tests/integration/: test_examples.py
tests/unit/: test_server.py
