[project]
name = "mcpd-plugins"
dynamic = ["version"]
description = "mcpd plugins Python SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "protobuf>=5.29.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.68.0",
    "debugpy>=1.8.14",
]
lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
tests = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "setuptools>=80.9.0",
    "setuptools-scm>=8.3.1",
]
all = [
    { include-group = "dev" },
    { include-group = "lint" },
    { include-group = "tests" },
]

[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools.package-data]
mcpd_plugins = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/mcpd_plugins/_version.py"
